zkay/examples/type_errors/Indexing_Nested.zkay
pragma zkay >=0.2.0;

contract Indexing_Nested {

    mapping(address!x => mapping(address => uint@x)) values;


	function f(address a, uint@me value) public {
		values[a][me] = value;
	}

}
